--- a/app/src/main/res/layout/activity_movie_trailer.xml
+++ b/app/src/main/res/layout/activity_movie_trailer.xml
@@ -9,7 +9,9 @@
 
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/player"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
 
 </android.support.constraint.ConstraintLayout>
